--- a/src/main/webapp/petty_cash_bill.xhtml
+++ b/src/main/webapp/petty_cash_bill.xhtml
@@ -38,7 +38,7 @@
                             </h:panelGroup>
 
 
-                            <p:commandButton  value="Settle" action="#{pettyCashBillController.checkInvoiceNumber()}" ajax="false"  style="width: 150px; padding: 1px;border: 1px solid ; margin: auto;">
+                            <p:commandButton  value="Settle" action="#{pettyCashBillController.settleBill()}" ajax="false"  style="width: 150px; padding: 1px;border: 1px solid ; margin: auto;">
                             </p:commandButton>
                             <p:commandButton value="New Bill" ajax="false" action="#{pettyCashBillController.prepareNewBill()}" >
                             </p:commandButton>                            
