Hr Basic Salary Changes Channel bill Report new(Specilty/staff/area/daterange/) Store Asset registory changes asset number genration chnges
Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -31,6 +31,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Bill Fees" action="/channel/channel_report_by_fee"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Bill Fees with Fee Types" action="/channel/report_cashier_summery_with_fee-type"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Bill Summary()" action="/channel/channel_report_all_booking" actionListener="#{channelReportController.clearAll}"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Bill Summary(Special)" action="/channel/channel_report_all_booking_special" actionListener="#{channelReportController.clearAll}" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Bill Detail Summary()" action="/channel/channel_report_by_bill_class"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="All Department Bill Summary" action="/channel/channel_report_department_wise_bills"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="All Channel Bills" action="/channel/channel_report_all_bills"/>
